[fixes # 31327561] Add Lims::Api::ContextService and config/database.sql
Empty class and instanciate it in config.ru

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,10 @@
-development:
+development_:
   adapter: postgres
   database: core
+
+development:
+  adapter: sqlite
+  database: dev.db
 
 test:
   adapter: sqlite
