--- a/config/database.yml
+++ b/config/database.yml
@@ -9,3 +9,21 @@ development:
 test:
   adapter: sqlite
   database: test.db
+
+development__:
+  adapter: mysql2
+  encoding: utf8
+  charset: utf8
+  database: development
+  username: root
+  password:
+  socket: /tmp/mysql.sock
+
+test__:
+  adapter: mysql2
+  encoding: utf8
+  charset: utf8
+  database: test_lims_api
+  username: root
+  password:
+  socket: /tmp/mysql.sock
