--- a/config/amqp.yml
+++ b/config/amqp.yml
@@ -1,6 +1,5 @@
 defaults: &defaults
-  host: localhost
-  port: 5672
+  url: "amqp://localhost:5672"
   exchange_name: "S2.exchange"
   durable: true
   message_persistent: true
